fixed:dropdownmenu alignment; overlapping issues

--- a/app/assets/stylesheets/dropdown.scss
+++ b/app/assets/stylesheets/dropdown.scss
@@ -7,7 +7,10 @@
     cursor: pointer;
 	box-shadow: inset 0 0 7px 1px navy;
 	border-radius: 3px;
+	margin-right: 150px;
+	
 }
+
 
 .dropbtn:hover, .dropbtn:focus {
     background-color: blue;
@@ -22,9 +25,10 @@
     display: none;
     position: absolute;
     background-color: #f9f9f9;
-    min-width: 50px;
+    min-width: inherit;
     overflow: auto;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index:999;
 }
 
 .dropdown-content a {
@@ -32,6 +36,7 @@
     padding: 12px 16px;
     text-decoration: none;
     display: block;
+    z-index:999;
 }
 
 .dropdown a:hover {background-color: #f1f1f1}
